Preserve deterministic remote pose order